--- a/qlik-k8s-demo-resources/charts/drill/values.yaml
+++ b/qlik-k8s-demo-resources/charts/drill/values.yaml
@@ -14,9 +14,12 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
-service:
-  type: ClusterIP
 
+service:
+  type: NodePort
+  ports:
+    - port: 31010
+      nodePort: 31004
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
