--- a/qlik-k8s-demo-resources/charts/mongo/values.yaml
+++ b/qlik-k8s-demo-resources/charts/mongo/values.yaml
@@ -12,9 +12,12 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+
 service:
-  type: ClusterIP
-  port: 27017
+  type: NodePort
+  ports:
+    - port: 27017
+      nodePort: 31002
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
